src/parser/src/RustedParser.ts
// Generated from src/Rusted.g4 by ANTLR 4.13.1

import * as antlr from "antlr4ng";

import { RustedListener } from "./RustedListener.js";
import { RustedVisitor } from "./RustedVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export class RustedParser extends antlr.Parser {
  public static readonly T__0 = 1;
  public static readonly T__1 = 2;
  public static readonly T__2 = 3;
  public static readonly T__3 = 4;
  public static readonly T__4 = 5;
  public static readonly T__5 = 6;
  public static readonly T__6 = 7;
  public static readonly T__7 = 8;
  public static readonly T__8 = 9;
  public static readonly T__9 = 10;
  public static readonly T__10 = 11;
  public static readonly T__11 = 12;
  public static readonly T__12 = 13;
  public static readonly T__13 = 14;
  public static readonly T__14 = 15;
  public static readonly T__15 = 16;
  public static readonly T__16 = 17;
  public static readonly T__17 = 18;
  public static readonly T__18 = 19;
  public static readonly T__19 = 20;
  public static readonly T__20 = 21;
  public static readonly T__21 = 22;
  public static readonly T__22 = 23;
  public static readonly T__23 = 24;
  public static readonly T__24 = 25;
  public static readonly T__25 = 26;
  public static readonly T__26 = 27;
  public static readonly T__27 = 28;
  public static readonly T__28 = 29;
  public static readonly T__29 = 30;
  public static readonly T__30 = 31;
  public static readonly IDENTIFIER = 32;
  public static readonly INTEGER_LITERAL = 33;
  public static readonly BOOLEAN_LITERAL = 34;
  public static readonly STRING_LITERAL = 35;
  public static readonly COMMENT = 36;
  public static readonly MULTILINE_COMMENT = 37;
  public static readonly WS = 38;
  public static readonly RULE_program = 0;
  public static readonly RULE_item = 1;
  public static readonly RULE_function = 2;
  public static readonly RULE_parameter_list = 3;
  public static readonly RULE_parameter = 4;
  public static readonly RULE_block = 5;
  public static readonly RULE_statement = 6;
  public static readonly RULE_let_statement = 7;
  public static readonly RULE_expression_statement = 8;
  public static readonly RULE_return_statement = 9;
  public static readonly RULE_if_statement = 10;
  public static readonly RULE_while_statement = 11;
  public static readonly RULE_expression = 12;
  public static readonly RULE_assignment_expr = 13;
  public static readonly RULE_logical_expr = 14;
  public static readonly RULE_comparison_expr = 15;
  public static readonly RULE_additive_expr = 16;
  public static readonly RULE_multiplicative_expr = 17;
  public static readonly RULE_unary_expr = 18;
  public static readonly RULE_ref_primary_expr = 19;
  public static readonly RULE_primary_expr = 20;
  public static readonly RULE_function_call = 21;
  public static readonly RULE_type = 22;
  public static readonly RULE_literal = 23;

  public static readonly literalNames = [
    null,
    "'fn'",
    "'('",
    "')'",
    "'->'",
    "','",
    "':'",
    "'{'",
    "'}'",
    "'let'",
    "'mut'",
    "'='",
    "';'",
    "'return'",
    "'if'",
    "'else'",
    "'while'",
    "'&&'",
    "'||'",
    "'=='",
    "'!='",
    "'<'",
    "'<='",
    "'>'",
    "'>='",
    "'+'",
    "'-'",
    "'*'",
    "'/'",
    "'%'",
    "'!'",
    "'&'",
  ];

  public static readonly symbolicNames = [
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    "IDENTIFIER",
    "INTEGER_LITERAL",
    "BOOLEAN_LITERAL",
    "STRING_LITERAL",
    "COMMENT",
    "MULTILINE_COMMENT",
    "WS",
  ];
  public static readonly ruleNames = [
    "program",
    "item",
    "function",
    "parameter_list",
    "parameter",
    "block",
    "statement",
    "let_statement",
    "expression_statement",
    "return_statement",
    "if_statement",
    "while_statement",
    "expression",
    "assignment_expr",
    "logical_expr",
    "comparison_expr",
    "additive_expr",
    "multiplicative_expr",
    "unary_expr",
    "ref_primary_expr",
    "primary_expr",
    "function_call",
    "type",
    "literal",
  ];

  public get grammarFileName(): string {
    return "Rusted.g4";
  }
  public get literalNames(): (string | null)[] {
    return RustedParser.literalNames;
  }
  public get symbolicNames(): (string | null)[] {
    return RustedParser.symbolicNames;
  }
  public get ruleNames(): string[] {
    return RustedParser.ruleNames;
  }
  public get serializedATN(): number[] {
    return RustedParser._serializedATN;
  }

  protected createFailedPredicateException(
    predicate?: string,
    message?: string
  ): antlr.FailedPredicateException {
    return new antlr.FailedPredicateException(this, predicate, message);
  }

  public constructor(input: antlr.TokenStream) {
    super(input);
    this.interpreter = new antlr.ParserATNSimulator(
      this,
      RustedParser._ATN,
      RustedParser.decisionsToDFA,
      new antlr.PredictionContextCache()
    );
  }
  public program(): ProgramContext {
    let localContext = new ProgramContext(this.context, this.state);
    this.enterRule(localContext, 0, RustedParser.RULE_program);
    let _la: number;
    try {
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 51;
        this.errorHandler.sync(this);
        _la = this.tokenStream.LA(1);
        while (_la === 1 || _la === 9) {
          {
            {
              this.state = 48;
              this.item();
            }
          }
          this.state = 53;
          this.errorHandler.sync(this);
          _la = this.tokenStream.LA(1);
        }
        this.state = 54;
        this.match(RustedParser.EOF);
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public item(): ItemContext {
    let localContext = new ItemContext(this.context, this.state);
    this.enterRule(localContext, 2, RustedParser.RULE_item);
    try {
      this.state = 58;
      this.errorHandler.sync(this);
      switch (this.tokenStream.LA(1)) {
        case RustedParser.T__0:
          this.enterOuterAlt(localContext, 1);
          {
            this.state = 56;
            this.function_();
          }
          break;
        case RustedParser.T__8:
          this.enterOuterAlt(localContext, 2);
          {
            this.state = 57;
            this.let_statement();
          }
          break;
        default:
          throw new antlr.NoViableAltException(this);
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public function_(): FunctionContext {
    let localContext = new FunctionContext(this.context, this.state);
    this.enterRule(localContext, 4, RustedParser.RULE_function);
    let _la: number;
    try {
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 60;
        this.match(RustedParser.T__0);
        this.state = 61;
        this.match(RustedParser.IDENTIFIER);
        this.state = 62;
        this.match(RustedParser.T__1);
        this.state = 64;
        this.errorHandler.sync(this);
        _la = this.tokenStream.LA(1);
        if (_la === 32) {
          {
            this.state = 63;
            this.parameter_list();
          }
        }

        this.state = 66;
        this.match(RustedParser.T__2);
        this.state = 67;
        this.match(RustedParser.T__3);
        this.state = 68;
        this.type_();
        this.state = 69;
        this.block();
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public parameter_list(): Parameter_listContext {
    let localContext = new Parameter_listContext(this.context, this.state);
    this.enterRule(localContext, 6, RustedParser.RULE_parameter_list);
    let _la: number;
    try {
      let alternative: number;
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 71;
        this.parameter();
        this.state = 76;
        this.errorHandler.sync(this);
        alternative = this.interpreter.adaptivePredict(
          this.tokenStream,
          3,
          this.context
        );
        while (
          alternative !== 2 &&
          alternative !== antlr.ATN.INVALID_ALT_NUMBER
        ) {
          if (alternative === 1) {
            {
              {
                this.state = 72;
                this.match(RustedParser.T__4);
                this.state = 73;
                this.parameter();
              }
            }
          }
          this.state = 78;
          this.errorHandler.sync(this);
          alternative = this.interpreter.adaptivePredict(
            this.tokenStream,
            3,
            this.context
          );
        }
        this.state = 80;
        this.errorHandler.sync(this);
        _la = this.tokenStream.LA(1);
        if (_la === 5) {
          {
            this.state = 79;
            this.match(RustedParser.T__4);
          }
        }
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public parameter(): ParameterContext {
    let localContext = new ParameterContext(this.context, this.state);
    this.enterRule(localContext, 8, RustedParser.RULE_parameter);
    try {
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 82;
        this.match(RustedParser.IDENTIFIER);
        this.state = 83;
        this.match(RustedParser.T__5);
        this.state = 84;
        this.type_();
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public block(): BlockContext {
    let localContext = new BlockContext(this.context, this.state);
    this.enterRule(localContext, 10, RustedParser.RULE_block);
    let _la: number;
    try {
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 86;
        this.match(RustedParser.T__6);
        this.state = 90;
        this.errorHandler.sync(this);
        _la = this.tokenStream.LA(1);
        while (
          ((_la & ~0x1f) === 0 && ((1 << _la) & 3422642820) !== 0) ||
          (((_la - 32) & ~0x1f) === 0 && ((1 << (_la - 32)) & 15) !== 0)
        ) {
          {
            {
              this.state = 87;
              this.statement();
            }
          }
          this.state = 92;
          this.errorHandler.sync(this);
          _la = this.tokenStream.LA(1);
        }
        this.state = 93;
        this.match(RustedParser.T__7);
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public statement(): StatementContext {
    let localContext = new StatementContext(this.context, this.state);
    this.enterRule(localContext, 12, RustedParser.RULE_statement);
    try {
      this.state = 101;
      this.errorHandler.sync(this);
      switch (this.tokenStream.LA(1)) {
        case RustedParser.T__8:
          this.enterOuterAlt(localContext, 1);
          {
            this.state = 95;
            this.let_statement();
          }
          break;
        case RustedParser.T__1:
        case RustedParser.T__25:
        case RustedParser.T__26:
        case RustedParser.T__29:
        case RustedParser.T__30:
        case RustedParser.IDENTIFIER:
        case RustedParser.INTEGER_LITERAL:
        case RustedParser.BOOLEAN_LITERAL:
        case RustedParser.STRING_LITERAL:
          this.enterOuterAlt(localContext, 2);
          {
            this.state = 96;
            this.expression_statement();
          }
          break;
        case RustedParser.T__12:
          this.enterOuterAlt(localContext, 3);
          {
            this.state = 97;
            this.return_statement();
          }
          break;
        case RustedParser.T__6:
          this.enterOuterAlt(localContext, 4);
          {
            this.state = 98;
            this.block();
          }
          break;
        case RustedParser.T__13:
          this.enterOuterAlt(localContext, 5);
          {
            this.state = 99;
            this.if_statement();
          }
          break;
        case RustedParser.T__15:
          this.enterOuterAlt(localContext, 6);
          {
            this.state = 100;
            this.while_statement();
          }
          break;
        default:
          throw new antlr.NoViableAltException(this);
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public let_statement(): Let_statementContext {
    let localContext = new Let_statementContext(this.context, this.state);
    this.enterRule(localContext, 14, RustedParser.RULE_let_statement);
    let _la: number;
    try {
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 103;
        this.match(RustedParser.T__8);
        this.state = 105;
        this.errorHandler.sync(this);
        _la = this.tokenStream.LA(1);
        if (_la === 10) {
          {
            this.state = 104;
            this.match(RustedParser.T__9);
          }
        }

        this.state = 107;
        this.match(RustedParser.IDENTIFIER);
        this.state = 108;
        this.match(RustedParser.T__5);
        this.state = 109;
        this.type_();
        this.state = 112;
        this.errorHandler.sync(this);
        _la = this.tokenStream.LA(1);
        if (_la === 11) {
          {
            this.state = 110;
            this.match(RustedParser.T__10);
            this.state = 111;
            this.expression();
          }
        }

        this.state = 114;
        this.match(RustedParser.T__11);
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public expression_statement(): Expression_statementContext {
    let localContext = new Expression_statementContext(
      this.context,
      this.state
    );
    this.enterRule(localContext, 16, RustedParser.RULE_expression_statement);
    try {
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 116;
        this.expression();
        this.state = 117;
        this.match(RustedParser.T__11);
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public return_statement(): Return_statementContext {
    let localContext = new Return_statementContext(this.context, this.state);
    this.enterRule(localContext, 18, RustedParser.RULE_return_statement);
    let _la: number;
    try {
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 119;
        this.match(RustedParser.T__12);
        this.state = 121;
        this.errorHandler.sync(this);
        _la = this.tokenStream.LA(1);
        if (
          ((_la & ~0x1f) === 0 && ((1 << _la) & 3422552068) !== 0) ||
          (((_la - 32) & ~0x1f) === 0 && ((1 << (_la - 32)) & 15) !== 0)
        ) {
          {
            this.state = 120;
            this.expression();
          }
        }

        this.state = 123;
        this.match(RustedParser.T__11);
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public if_statement(): If_statementContext {
    let localContext = new If_statementContext(this.context, this.state);
    this.enterRule(localContext, 20, RustedParser.RULE_if_statement);
    let _la: number;
    try {
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 125;
        this.match(RustedParser.T__13);
        this.state = 126;
        this.expression();
        this.state = 127;
        this.block();
        this.state = 133;
        this.errorHandler.sync(this);
        _la = this.tokenStream.LA(1);
        if (_la === 15) {
          {
            this.state = 128;
            this.match(RustedParser.T__14);
            this.state = 131;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
              case RustedParser.T__13:
                {
                  this.state = 129;
                  this.if_statement();
                }
                break;
              case RustedParser.T__6:
                {
                  this.state = 130;
                  this.block();
                }
                break;
              default:
                throw new antlr.NoViableAltException(this);
            }
          }
        }
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public while_statement(): While_statementContext {
    let localContext = new While_statementContext(this.context, this.state);
    this.enterRule(localContext, 22, RustedParser.RULE_while_statement);
    try {
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 135;
        this.match(RustedParser.T__15);
        this.state = 136;
        this.expression();
        this.state = 137;
        this.block();
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public expression(): ExpressionContext {
    let localContext = new ExpressionContext(this.context, this.state);
    this.enterRule(localContext, 24, RustedParser.RULE_expression);
    try {
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 139;
        this.assignment_expr();
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public assignment_expr(): Assignment_exprContext {
    let localContext = new Assignment_exprContext(this.context, this.state);
    this.enterRule(localContext, 26, RustedParser.RULE_assignment_expr);
    let _la: number;
    try {
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 141;
        this.logical_expr();
        this.state = 144;
        this.errorHandler.sync(this);
        _la = this.tokenStream.LA(1);
        if (_la === 11) {
          {
            this.state = 142;
            this.match(RustedParser.T__10);
            this.state = 143;
            this.assignment_expr();
          }
        }
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public logical_expr(): Logical_exprContext {
    let localContext = new Logical_exprContext(this.context, this.state);
    this.enterRule(localContext, 28, RustedParser.RULE_logical_expr);
    let _la: number;
    try {
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 146;
        this.comparison_expr();
        this.state = 151;
        this.errorHandler.sync(this);
        _la = this.tokenStream.LA(1);
        while (_la === 17 || _la === 18) {
          {
            {
              this.state = 147;
              _la = this.tokenStream.LA(1);
              if (!(_la === 17 || _la === 18)) {
                this.errorHandler.recoverInline(this);
              } else {
                this.errorHandler.reportMatch(this);
                this.consume();
              }
              this.state = 148;
              this.comparison_expr();
            }
          }
          this.state = 153;
          this.errorHandler.sync(this);
          _la = this.tokenStream.LA(1);
        }
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public comparison_expr(): Comparison_exprContext {
    let localContext = new Comparison_exprContext(this.context, this.state);
    this.enterRule(localContext, 30, RustedParser.RULE_comparison_expr);
    let _la: number;
    try {
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 154;
        this.additive_expr();
        this.state = 159;
        this.errorHandler.sync(this);
        _la = this.tokenStream.LA(1);
        while ((_la & ~0x1f) === 0 && ((1 << _la) & 33030144) !== 0) {
          {
            {
              this.state = 155;
              _la = this.tokenStream.LA(1);
              if (!((_la & ~0x1f) === 0 && ((1 << _la) & 33030144) !== 0)) {
                this.errorHandler.recoverInline(this);
              } else {
                this.errorHandler.reportMatch(this);
                this.consume();
              }
              this.state = 156;
              this.additive_expr();
            }
          }
          this.state = 161;
          this.errorHandler.sync(this);
          _la = this.tokenStream.LA(1);
        }
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public additive_expr(): Additive_exprContext {
    let localContext = new Additive_exprContext(this.context, this.state);
    this.enterRule(localContext, 32, RustedParser.RULE_additive_expr);
    let _la: number;
    try {
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 162;
        this.multiplicative_expr();
        this.state = 167;
        this.errorHandler.sync(this);
        _la = this.tokenStream.LA(1);
        while (_la === 25 || _la === 26) {
          {
            {
              this.state = 163;
              _la = this.tokenStream.LA(1);
              if (!(_la === 25 || _la === 26)) {
                this.errorHandler.recoverInline(this);
              } else {
                this.errorHandler.reportMatch(this);
                this.consume();
              }
              this.state = 164;
              this.multiplicative_expr();
            }
          }
          this.state = 169;
          this.errorHandler.sync(this);
          _la = this.tokenStream.LA(1);
        }
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public multiplicative_expr(): Multiplicative_exprContext {
    let localContext = new Multiplicative_exprContext(this.context, this.state);
    this.enterRule(localContext, 34, RustedParser.RULE_multiplicative_expr);
    let _la: number;
    try {
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 170;
        this.unary_expr();
        this.state = 175;
        this.errorHandler.sync(this);
        _la = this.tokenStream.LA(1);
        while ((_la & ~0x1f) === 0 && ((1 << _la) & 939524096) !== 0) {
          {
            {
              this.state = 171;
              _la = this.tokenStream.LA(1);
              if (!((_la & ~0x1f) === 0 && ((1 << _la) & 939524096) !== 0)) {
                this.errorHandler.recoverInline(this);
              } else {
                this.errorHandler.reportMatch(this);
                this.consume();
              }
              this.state = 172;
              this.unary_expr();
            }
          }
          this.state = 177;
          this.errorHandler.sync(this);
          _la = this.tokenStream.LA(1);
        }
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public unary_expr(): Unary_exprContext {
    let localContext = new Unary_exprContext(this.context, this.state);
    this.enterRule(localContext, 36, RustedParser.RULE_unary_expr);
    let _la: number;
    try {
      this.state = 181;
      this.errorHandler.sync(this);
      switch (this.tokenStream.LA(1)) {
        case RustedParser.T__25:
        case RustedParser.T__29:
          this.enterOuterAlt(localContext, 1);
          {
            this.state = 178;
            _la = this.tokenStream.LA(1);
            if (!(_la === 26 || _la === 30)) {
              this.errorHandler.recoverInline(this);
            } else {
              this.errorHandler.reportMatch(this);
              this.consume();
            }
            this.state = 179;
            this.unary_expr();
          }
          break;
        case RustedParser.T__1:
        case RustedParser.T__26:
        case RustedParser.T__30:
        case RustedParser.IDENTIFIER:
        case RustedParser.INTEGER_LITERAL:
        case RustedParser.BOOLEAN_LITERAL:
        case RustedParser.STRING_LITERAL:
          this.enterOuterAlt(localContext, 2);
          {
            this.state = 180;
            this.ref_primary_expr();
          }
          break;
        default:
          throw new antlr.NoViableAltException(this);
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public ref_primary_expr(): Ref_primary_exprContext {
    let localContext = new Ref_primary_exprContext(this.context, this.state);
    this.enterRule(localContext, 38, RustedParser.RULE_ref_primary_expr);
    let _la: number;
    try {
      this.state = 191;
      this.errorHandler.sync(this);
      switch (this.tokenStream.LA(1)) {
        case RustedParser.T__1:
        case RustedParser.IDENTIFIER:
        case RustedParser.INTEGER_LITERAL:
        case RustedParser.BOOLEAN_LITERAL:
        case RustedParser.STRING_LITERAL:
          this.enterOuterAlt(localContext, 1);
          {
            this.state = 183;
            this.primary_expr();
          }
          break;
        case RustedParser.T__30:
          this.enterOuterAlt(localContext, 2);
          {
            this.state = 184;
            this.match(RustedParser.T__30);
            this.state = 186;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 10) {
              {
                this.state = 185;
                this.match(RustedParser.T__9);
              }
            }

            this.state = 188;
            this.primary_expr();
          }
          break;
        case RustedParser.T__26:
          this.enterOuterAlt(localContext, 3);
          {
            this.state = 189;
            this.match(RustedParser.T__26);
            this.state = 190;
            this.primary_expr();
          }
          break;
        default:
          throw new antlr.NoViableAltException(this);
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public primary_expr(): Primary_exprContext {
    let localContext = new Primary_exprContext(this.context, this.state);
    this.enterRule(localContext, 40, RustedParser.RULE_primary_expr);
    try {
      this.state = 200;
      this.errorHandler.sync(this);
      switch (
        this.interpreter.adaptivePredict(this.tokenStream, 20, this.context)
      ) {
        case 1:
          this.enterOuterAlt(localContext, 1);
          {
            this.state = 193;
            this.match(RustedParser.IDENTIFIER);
          }
          break;
        case 2:
          this.enterOuterAlt(localContext, 2);
          {
            this.state = 194;
            this.literal();
          }
          break;
        case 3:
          this.enterOuterAlt(localContext, 3);
          {
            this.state = 195;
            this.function_call();
          }
          break;
        case 4:
          this.enterOuterAlt(localContext, 4);
          {
            this.state = 196;
            this.match(RustedParser.T__1);
            this.state = 197;
            this.expression();
            this.state = 198;
            this.match(RustedParser.T__2);
          }
          break;
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public function_call(): Function_callContext {
    let localContext = new Function_callContext(this.context, this.state);
    this.enterRule(localContext, 42, RustedParser.RULE_function_call);
    let _la: number;
    try {
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 202;
        this.match(RustedParser.IDENTIFIER);
        this.state = 203;
        this.match(RustedParser.T__1);
        this.state = 212;
        this.errorHandler.sync(this);
        _la = this.tokenStream.LA(1);
        if (
          ((_la & ~0x1f) === 0 && ((1 << _la) & 3422552068) !== 0) ||
          (((_la - 32) & ~0x1f) === 0 && ((1 << (_la - 32)) & 15) !== 0)
        ) {
          {
            this.state = 204;
            this.expression();
            this.state = 209;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 5) {
              {
                {
                  this.state = 205;
                  this.match(RustedParser.T__4);
                  this.state = 206;
                  this.expression();
                }
              }
              this.state = 211;
              this.errorHandler.sync(this);
              _la = this.tokenStream.LA(1);
            }
          }
        }

        this.state = 214;
        this.match(RustedParser.T__2);
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public type_(): TypeContext {
    let localContext = new TypeContext(this.context, this.state);
    this.enterRule(localContext, 44, RustedParser.RULE_type);
    let _la: number;
    try {
      this.state = 243;
      this.errorHandler.sync(this);
      switch (
        this.interpreter.adaptivePredict(this.tokenStream, 26, this.context)
      ) {
        case 1:
          this.enterOuterAlt(localContext, 1);
          {
            this.state = 216;
            this.match(RustedParser.IDENTIFIER);
          }
          break;
        case 2:
          this.enterOuterAlt(localContext, 2);
          {
            this.state = 217;
            this.match(RustedParser.T__30);
            this.state = 219;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 10) {
              {
                this.state = 218;
                this.match(RustedParser.T__9);
              }
            }

            this.state = 221;
            this.type_();
          }
          break;
        case 3:
          this.enterOuterAlt(localContext, 3);
          {
            this.state = 222;
            this.match(RustedParser.T__1);
            this.state = 223;
            this.type_();
            this.state = 224;
            this.match(RustedParser.T__2);
          }
          break;
        case 4:
          this.enterOuterAlt(localContext, 4);
          {
            this.state = 226;
            this.match(RustedParser.T__1);
            this.state = 227;
            this.match(RustedParser.T__2);
          }
          break;
        case 5:
          this.enterOuterAlt(localContext, 5);
          {
            this.state = 228;
            this.match(RustedParser.T__0);
            this.state = 229;
            this.match(RustedParser.T__1);
            this.state = 238;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (
              ((_la - 1) & ~0x1f) === 0 &&
              ((1 << (_la - 1)) & 3221225475) !== 0
            ) {
              {
                this.state = 230;
                this.type_();
                this.state = 235;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                while (_la === 5) {
                  {
                    {
                      this.state = 231;
                      this.match(RustedParser.T__4);
                      this.state = 232;
                      this.type_();
                    }
                  }
                  this.state = 237;
                  this.errorHandler.sync(this);
                  _la = this.tokenStream.LA(1);
                }
              }
            }
